--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
