--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "next-view-transitions": "^0.1.1",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
